--- a/manifest.json
+++ b/manifest.json
@@ -2,9 +2,22 @@
   "manifest_version": 3,
   "name": "Tab Leap",
   "version": "0.1.0",
-  "description": "Chrome extension for tab management",
+  "description": "Open all links in foreground tabs",
   "permissions": [
     "tabs"
+  ],
+  "host_permissions": [
+    "<all_urls>"
+  ],
+  "background": {
+    "service_worker": "background.js"
+  },
+  "content_scripts": [
+    {
+      "matches": ["<all_urls>"],
+      "js": ["content.js"],
+      "run_at": "document_end"
+    }
   ],
   "action": {
     "default_popup": "popup.html",
